--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@ $(document).ready(function () {
 <div id="about-the-project" class="section level1">
 <h1>About the project</h1>
 <p><em>Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the ‘Useful links’ page in the mooc area (chapter 1) for instructions.</em></p>
-<p>This is a neet data analysis course.</p>
+<p>This is a neat data analysis course.</p>
 <p>Here is a link to my course repo: <a href="https://github.com/akaariala/IODS-project" class="uri">https://github.com/akaariala/IODS-project</a></p>
+<p>Hmmm… why don’t I see changes in my course diary?</p>
 <hr />
 </div>
 <div id="insert-chapter-2-title-here" class="section level1">
