--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ $(document).ready(function () {
 <p>This is a neat data analysis course.</p>
 <p>Here is a link to my course repo: <a href="https://github.com/akaariala/IODS-project" class="uri">https://github.com/akaariala/IODS-project</a></p>
 <p>Hmmm… why don’t I see changes in my course diary?</p>
+<p>Oh, now I do!</p>
 <hr />
 </div>
 <div id="insert-chapter-2-title-here" class="section level1">
